resvg-skia/src/ffi.rs

#[test]
fn bindgen_test_layout_skia_matrix() {
    assert_eq!(
        ::std::mem::size_of::<skia_matrix>(),
        48usize,
        concat!("Size of: ", stringify!(skia_matrix))
    );
    assert_eq!(
        ::std::mem::align_of::<skia_matrix>(),
        8usize,
        concat!("Alignment of ", stringify!(skia_matrix))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).a as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(a)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).b as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(b)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).c as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(c)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).d as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).e as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(e)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_matrix>())).f as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_matrix),
            "::",
            stringify!(f)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct skia_point {
    pub x: f32,
    pub y: f32,
}
#[test]
fn bindgen_test_layout_skia_point() {
    assert_eq!(
        ::std::mem::size_of::<skia_point>(),
        8usize,
        concat!("Size of: ", stringify!(skia_point))
    );
    assert_eq!(
        ::std::mem::align_of::<skia_point>(),
        4usize,
        concat!("Alignment of ", stringify!(skia_point))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_point>())).x as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_point),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skia_point>())).y as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(skia_point),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct skiac_surface_data {
    pub ptr: *mut u8,
    pub size: u32,
}
#[test]
fn bindgen_test_layout_skiac_surface_data() {
    assert_eq!(
        ::std::mem::size_of::<skiac_surface_data>(),
        16usize,
        concat!("Size of: ", stringify!(skiac_surface_data))
    );
    assert_eq!(
        ::std::mem::align_of::<skiac_surface_data>(),
        8usize,
        concat!("Alignment of ", stringify!(skiac_surface_data))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skiac_surface_data>())).ptr as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(skiac_surface_data),
            "::",
            stringify!(ptr)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<skiac_surface_data>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(skiac_surface_data),
            "::",
            stringify!(size)
        )
    );
}
pub const PaintStyle_Fill: PaintStyle = 0;
pub const PaintStyle_Stroke: PaintStyle = 1;
pub type PaintStyle = i32;
pub const StrokeCap_Butt: StrokeCap = 0;
pub const StrokeCap_Round: StrokeCap = 1;
pub const StrokeCap_Square: StrokeCap = 2;
pub type StrokeCap = i32;
pub const StrokeJoin_Miter: StrokeJoin = 0;
pub const StrokeJoin_Round: StrokeJoin = 1;
pub const StrokeJoin_Bevel: StrokeJoin = 2;
pub type StrokeJoin = i32;
pub const FillType_Winding: FillType = 0;
pub const FillType_EvenOdd: FillType = 1;
pub type FillType = i32;
pub const TileMode_Clamp: TileMode = 0;
pub const TileMode_Repeat: TileMode = 1;
pub const TileMode_Mirror: TileMode = 2;
pub type TileMode = i32;
pub const BlendMode_Clear: BlendMode = 0;
pub const BlendMode_SourceOver: BlendMode = 1;
pub const BlendMode_DestinationOver: BlendMode = 2;
pub const BlendMode_SourceIn: BlendMode = 3;
pub const BlendMode_DestinationIn: BlendMode = 4;
pub const BlendMode_SourceOut: BlendMode = 5;
pub const BlendMode_DestinationOut: BlendMode = 6;
pub const BlendMode_SourceAtop: BlendMode = 7;
pub const BlendMode_Xor: BlendMode = 8;
pub const BlendMode_Multiply: BlendMode = 9;
pub const BlendMode_Screen: BlendMode = 10;
pub const BlendMode_Darken: BlendMode = 11;
pub const BlendMode_Lighten: BlendMode = 12;
pub const BlendMode___Size: BlendMode = 13;
pub type BlendMode = i32;
pub const FilterQuality_None: FilterQuality = 0;
pub const FilterQuality_Low: FilterQuality = 1;
pub const FilterQuality_Medium: FilterQuality = 2;
pub const FilterQuality_High: FilterQuality = 3;
pub type FilterQuality = i32;
extern "C" {
    pub fn skiac_surface_create_rgba_premultiplied(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> *mut skiac_surface;
}
extern "C" {
    pub fn skiac_surface_create_rgba(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> *mut skiac_surface;
}
extern "C" {
    pub fn skiac_surface_create_from_image_data(
        buffer: *const ::std::os::raw::c_void,
        size: u32,
    ) -> *mut skiac_surface;
}
extern "C" {
    pub fn skiac_surface_create_from_file(
        path: *const ::std::os::raw::c_char,
    ) -> *mut skiac_surface;
}
extern "C" {
    pub fn skiac_surface_destroy(c_surface: *mut skiac_surface);
}
extern "C" {
    pub fn skiac_surface_copy_rgba(
        c_surface: *mut skiac_surface,
        x: u32,
        y: u32,
        width: u32,
        height: u32,
    ) -> *mut skiac_surface;
}
extern "C" {
    pub fn skiac_surface_save(
        c_surface: *mut skiac_surface,
        path: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn skiac_surface_get_canvas(c_surface: *mut skiac_surface) -> *mut skiac_canvas;
}
extern "C" {
    pub fn skiac_surface_get_width(c_surface: *mut skiac_surface) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skiac_surface_get_height(c_surface: *mut skiac_surface) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn skiac_surface_read_pixels(c_surface: *mut skiac_surface, data: *mut skiac_surface_data);
}
extern "C" {
    pub fn skiac_canvas_clear(c_canvas: *mut skiac_canvas, color: u32);
}
extern "C" {
    pub fn skiac_canvas_flush(c_canvas: *mut skiac_canvas);
}
extern "C" {
    pub fn skiac_canvas_set_matrix(c_canvas: *mut skiac_canvas, c_matrix: *mut skiac_matrix);
}
extern "C" {
    pub fn skiac_canvas_concat(c_canvas: *mut skiac_canvas, c_matrix: *mut skiac_matrix);
}
extern "C" {
    pub fn skiac_canvas_scale(c_canvas: *mut skiac_canvas, sx: f64, sy: f64);
}
extern "C" {
    pub fn skiac_canvas_translate(c_canvas: *mut skiac_canvas, dx: f64, dy: f64);
}
extern "C" {
    pub fn skiac_canvas_get_total_matrix(c_canvas: *mut skiac_canvas) -> *mut skiac_matrix;
}
extern "C" {
    pub fn skiac_canvas_draw_path(
        c_canvas: *mut skiac_canvas,
        c_path: *mut skiac_path,
        c_paint: *mut skiac_paint,
    );
}
extern "C" {
    pub fn skiac_canvas_draw_rect(
        c_canvas: *mut skiac_canvas,
        x: f64,
        y: f64,
        w: f64,
        h: f64,
        c_paint: *mut skiac_paint,
    );
}
extern "C" {
    pub fn skiac_canvas_draw_surface(
        c_canvas: *mut skiac_canvas,
        c_surface: *mut skiac_surface,
        left: f64,
        top: f64,
        alpha: u8,
        blendMode: BlendMode,
        filterQuality: FilterQuality,
    );
}
extern "C" {
    pub fn skiac_canvas_draw_surface_rect(
        c_canvas: *mut skiac_canvas,
        c_surface: *mut skiac_surface,
        x: f64,
        y: f64,
        w: f64,
        h: f64,
        filterQuality: FilterQuality,
    );
}
extern "C" {
    pub fn skiac_canvas_reset_matrix(c_canvas: *mut skiac_canvas);
}
extern "C" {
    pub fn skiac_canvas_clip_rect(c_canvas: *mut skiac_canvas, x: f64, y: f64, w: f64, h: f64);
}
extern "C" {
    pub fn skiac_canvas_save(c_canvas: *mut skiac_canvas);
}
extern "C" {
    pub fn skiac_canvas_restore(c_canvas: *mut skiac_canvas);
}
extern "C" {
    pub fn skiac_matrix_create() -> *mut skiac_matrix;
}
extern "C" {
    pub fn skiac_matrix_create_from(
        a: f64,
        b: f64,
        c: f64,
        d: f64,
        e: f64,
        f: f64,
    ) -> *mut skiac_matrix;
}
extern "C" {
    pub fn skiac_matrix_create_inverse(c_matrix: *mut skiac_matrix) -> *mut skiac_matrix;
}
extern "C" {
    pub fn skiac_matrix_get_data(c_matrix: *mut skiac_matrix) -> skia_matrix;
}
extern "C" {
    pub fn skiac_matrix_destroy(c_matrix: *mut skiac_matrix);
}
extern "C" {
    pub fn skiac_paint_create() -> *mut skiac_paint;
}
extern "C" {
    pub fn skiac_paint_destroy(c_paint: *mut skiac_paint);
}
extern "C" {
    pub fn skiac_paint_set_style(c_paint: *mut skiac_paint, style: PaintStyle);
}
extern "C" {
    pub fn skiac_paint_set_color(c_paint: *mut skiac_paint, r: u8, g: u8, b: u8, a: u8);
}
extern "C" {
    pub fn skiac_paint_set_alpha(c_paint: *mut skiac_paint, a: u8);
}
extern "C" {
    pub fn skiac_paint_set_anti_alias(c_paint: *mut skiac_paint, aa: bool);
}
extern "C" {
    pub fn skiac_paint_set_blend_mode(c_paint: *mut skiac_paint, blendMode: BlendMode);
}
extern "C" {
    pub fn skiac_paint_set_shader(c_paint: *mut skiac_paint, c_shader: *mut skiac_shader);
}
extern "C" {
    pub fn skiac_paint_set_stroke_width(c_paint: *mut skiac_paint, width: f64);
}
extern "C" {
    pub fn skiac_paint_set_stroke_cap(c_paint: *mut skiac_paint, cap: StrokeCap);
}
extern "C" {
    pub fn skiac_paint_set_stroke_join(c_paint: *mut skiac_paint, join: StrokeJoin);
}
extern "C" {
    pub fn skiac_paint_set_stroke_miter(c_paint: *mut skiac_paint, miter: f32);
}
extern "C" {
    pub fn skiac_paint_set_path_effect(
        c_paint: *mut skiac_paint,
        c_path_effect: *mut skiac_path_effect,
    );
}
extern "C" {
    pub fn skiac_path_create() -> *mut skiac_path;
}
extern "C" {
    pub fn skiac_path_destroy(c_path: *mut skiac_path);
}
extern "C" {
    pub fn skiac_path_set_fill_type(c_path: *mut skiac_path, type_: FillType);
}
extern "C" {
    pub fn skiac_path_move_to(c_path: *mut skiac_path, x: f64, y: f64);
}
extern "C" {
    pub fn skiac_path_line_to(c_path: *mut skiac_path, x: f64, y: f64);
}
extern "C" {
    pub fn skiac_path_cubic_to(
        c_path: *mut skiac_path,
        x1: f64,
        y1: f64,
        x2: f64,
        y2: f64,
        x3: f64,
        y3: f64,
    );
}
extern "C" {
    pub fn skiac_path_close(c_path: *mut skiac_path);
}
extern "C" {
    pub fn skiac_path_effect_make_dash_path(
        intervals: *const f32,
        count: ::std::os::raw::c_int,
        phase: f32,
    ) -> *mut skiac_path_effect;
}
extern "C" {
    pub fn skiac_path_effect_destroy(c_path_effect: *mut skiac_path_effect);
}
extern "C" {
    pub fn skiac_shader_make_linear_gradient(
        points: *const skia_point,
        colors: *const u32,
        positions: *const f32,
        count: ::std::os::raw::c_int,
        tile_mode: TileMode,
        flags: u32,
        c_matrix: *mut skiac_matrix,
    ) -> *mut skiac_shader;
}
